[package]
name = "file_crawler"
version = "0.1.0"
authors = ["Flip <palejaga@gmail.com>"]
edition = "2021"
description = "Count lines in a file of the desired extension"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
